avoid wraping in home toolkit phase title

--- a/app/assets/stylesheets/pages/home.sass
+++ b/app/assets/stylesheets/pages/home.sass
@@ -64,6 +64,7 @@
       font-weight: bold
       text-transform: uppercase
       line-height: 1.8em
+      max-height: 1.8em
     .goal
       font-size: 1.0em
       font-style: italic
